syntax = "proto3";

option go_package = "github.com/beam-cloud/beam/proto";

package queue;

service SimpleQueueService {
  rpc Enqueue(SimpleQueueEnqueueRequest) returns (SimpleQueueEnqueueResponse) {}
  rpc Dequeue(SimpleQueueDequeueRequest) returns (SimpleQueueDequeueResponse) {}
  rpc Peek(SimpleQueueRequest) returns (SimpleQueuePeekResponse) {}
  rpc Empty(SimpleQueueRequest) returns (SimpleQueueEmptyResponse) {}
  rpc Size(SimpleQueueRequest) returns (SimpleQueueSizeResponse) {}
}

message SimpleQueueEnqueueRequest {
    string name = 1;
    bytes value = 2;
}

message SimpleQueueEnqueueResponse { bool ok = 1; }

message SimpleQueueDequeueRequest {
    string name = 1;
    bytes value = 2;
}

message SimpleQueueDequeueResponse {
  bool ok = 1;
  bytes value = 2;
}

message SimpleQueuePeekResponse {
    bool ok = 1;
    bytes value = 2;
}

message SimpleQueueEmptyResponse {
    bool ok = 1;
    bool empty = 2;
}

message SimpleQueueSizeResponse {
    bool ok = 1;
    uint64 size = 2;
}

message SimpleQueueRequest {
    string name = 1;
}
